--- a/Day_2.ipynb
+++ b/Day_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "cc0439ef-47cc-443d-a59c-bbba6b90aef4",
    "metadata": {},
    "outputs": [],
@@ -301,9 +301,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.40251811, 0.23033815, 0.6614025 , 0.72163453, 0.14460109],\n",
-       "       [0.26555255, 0.03451611, 0.91132042, 0.02501817, 0.36230973],\n",
-       "       [0.54463348, 0.89258797, 0.83008819, 0.73976198, 0.75207   ]])"
+       "array([[0.01122192, 0.52774953, 0.96592831, 0.66608598, 0.85099018],\n",
+       "       [0.32394683, 0.30891223, 0.82665181, 0.17762491, 0.48978508],\n",
+       "       [0.93711726, 0.43015921, 0.08012003, 0.97363774, 0.39298837]])"
       ]
      },
      "execution_count": 16,
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "id": "30ce842b-1811-4ea7-a76d-7ab4591053ce",
    "metadata": {},
    "outputs": [
@@ -754,7 +754,7 @@
        " 'Attendance': ['100', '90', '80', '70', '60', '50']}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "id": "dd3d7d42-8ae7-4d67-8d7d-02f278b37aae",
    "metadata": {},
    "outputs": [],
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "id": "ba1874b4-abc5-450e-bada-020977902331",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
        "5     Soham   39072  20         50"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "id": "80250473-3fd9-4835-8591-3355fb660215",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
        " 'Cost Millions ': [200, 400, nan, 150, 250, nan]}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "id": "d6e813c9-3072-40c8-a1bc-5fa6e0b02cc7",
    "metadata": {},
    "outputs": [
@@ -993,7 +993,7 @@
        "5       Nuclear              3200.0             NaN"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "id": "4b0890d1-f85e-4042-bb7e-be9182c9bdc3",
    "metadata": {},
    "outputs": [
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "id": "96bd7a47-b306-48ac-9a48-f28672195cea",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1049,7 @@
        "5       Nuclear              3200.0             NaN>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "id": "0fab03c6-f822-4e24-ab49-483ea64dad6d",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1076,7 @@
        "5       Nuclear              3200.0             NaN>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "id": "2b6299ea-5cfd-44d1-9e41-287795c2f761",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1173,7 @@
        "max           3200.000000      400.000000"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,81 +1184,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "id": "8903108e-dad2-49ac-96e2-01a5ea630428",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned_df = energy_df.dropna()"
+    "#cleaned_df = energy_df.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 46,
    "id": "5ca55e10-1be2-43e8-a177-0ec762c25760",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Energy Source</th>\n",
-       "      <th>Energy Consumption</th>\n",
-       "      <th>Cost Millions</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Solar</td>\n",
-       "      <td>1200.0</td>\n",
-       "      <td>200.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Biomass</td>\n",
-       "      <td>2500.0</td>\n",
-       "      <td>250.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Energy Source  Energy Consumption  Cost Millions \n",
-       "0         Solar              1200.0           200.0\n",
-       "4       Biomass              2500.0           250.0"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cleaned_df"
+    "#cleaned_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 47,
    "id": "be9a52ab-6099-4c15-ad5c-3f67de86d521",
    "metadata": {},
    "outputs": [
@@ -1268,7 +1214,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1289,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "id": "b0284e14-b2d1-44c9-b4f5-268fb133a831",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1245,7 @@
        "Index(['Energy Source', 'Energy Consumption', 'Cost Millions '], dtype='object')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 49,
    "id": "8c36d0ca-9db7-4f0e-b8bd-d2f966ca6d6c",
    "metadata": {},
    "outputs": [],
@@ -1320,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 50,
    "id": "809e0ae3-58c8-4ac4-b72a-373681a186d5",
    "metadata": {},
    "outputs": [
@@ -1401,7 +1347,7 @@
        "5       Nuclear              3200.0             NaN"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "id": "4c909642-d001-45e0-8cb9-4d509fe1397e",
    "metadata": {},
    "outputs": [],
@@ -1424,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 52,
    "id": "b980bf57-80ee-44e4-94c9-13f6dc147501",
    "metadata": {},
    "outputs": [
@@ -1505,7 +1451,7 @@
        "5       Nuclear              3200.0           250.0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1513,12 +1459,13 @@
    "source": [
     "energy_df[\"Cost Millions \"].fillna(energy_df[\"Cost Millions \"].mean(), inplace = True )\n",
     "\n",
+    "energy_df1 = energy_df # For second transformation(Standard Transformation)\n",
     "energy_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 53,
    "id": "16e7b266-9fc0-4cf4-98c0-d03ab52e1904",
    "metadata": {},
    "outputs": [
@@ -1531,7 +1478,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,8 +1489,321 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "11ec1457-72d2-4663-bb54-7acab63fbad7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Energy Source          object\n",
+       "Energy Consumption    float64\n",
+       "Cost Millions         float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "energy_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "8c5c72bf-c0d3-477a-a0e7-3dc6958f17b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "b30c2f26-c4e0-4551-b2ce-ac0adb625720",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Energy Source', 'Energy Consumption', 'Cost Millions '], dtype='object')"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "energy_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "2a064883-db44-4045-a97f-8773af50f89d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "fd6d862c-a433-47c9-a07f-84924c618904",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energy_df[[\"Energy Consumption\", \"Cost Millions \"]] = scaler.fit_transform(energy_df[[\"Energy Consumption\", \"Cost Millions \" ]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "7ee67474-156b-4eaa-a561-5d0c0f85fedf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Energy Source</th>\n",
+       "      <th>Energy Consumption</th>\n",
+       "      <th>Cost Millions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Solar</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Wind</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hydropower</td>\n",
+       "      <td>0.850</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Geothermal</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Biomass</td>\n",
+       "      <td>0.650</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Nuclear</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Energy Source  Energy Consumption  Cost Millions \n",
+       "0         Solar               0.000             0.2\n",
+       "1          Wind               0.625             1.0\n",
+       "2    Hydropower               0.850             0.4\n",
+       "3    Geothermal               0.625             0.0\n",
+       "4       Biomass               0.650             0.4\n",
+       "5       Nuclear               1.000             0.4"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "energy_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8828c4f7-1b53-4cd3-bfd9-419a82226f6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c77325b0-5b73-4134-8f0f-3f2436d5778a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13036463-6e41-4c56-9b86-65307f038cf3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "1cb387ce-8c4b-4de9-9a99-d0eca21574ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "02de8f7b-871e-4700-ab77-99b50ebd7f8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_scaler = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "d4faf25c-9f86-4fd1-827a-e3771b1eceb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energy_df1[[\"Energy Consumption\", \"Cost Millions \"]] = new_scaler.fit_transform(energy_df1[[\"Energy Consumption\", \"Cost Millions \" ]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "9d53499f-45cf-40f2-8d06-637106fb3e44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Energy Source</th>\n",
+       "      <th>Energy Consumption</th>\n",
+       "      <th>Cost Millions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Solar</td>\n",
+       "      <td>-2.005893e+00</td>\n",
+       "      <td>-6.546537e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Wind</td>\n",
+       "      <td>2.082884e-16</td>\n",
+       "      <td>1.963961e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hydropower</td>\n",
+       "      <td>7.221213e-01</td>\n",
+       "      <td>-2.689447e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Geothermal</td>\n",
+       "      <td>2.082884e-16</td>\n",
+       "      <td>-1.309307e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Biomass</td>\n",
+       "      <td>8.023570e-02</td>\n",
+       "      <td>-2.689447e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Nuclear</td>\n",
+       "      <td>1.203536e+00</td>\n",
+       "      <td>-2.689447e-17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Energy Source  Energy Consumption  Cost Millions \n",
+       "0         Solar       -2.005893e+00   -6.546537e-01\n",
+       "1          Wind        2.082884e-16    1.963961e+00\n",
+       "2    Hydropower        7.221213e-01   -2.689447e-17\n",
+       "3    Geothermal        2.082884e-16   -1.309307e+00\n",
+       "4       Biomass        8.023570e-02   -2.689447e-17\n",
+       "5       Nuclear        1.203536e+00   -2.689447e-17"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "energy_df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a2a3b79-5f58-4956-80b5-05e89b2daaa7",
    "metadata": {},
    "outputs": [],
    "source": []
