--- a/Day_1.ipynb
+++ b/Day_1.ipynb
@@ -115,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'India', 'Maths', 35, 13.56}\n"
+      "{'India', 35, 13.56, 'Maths'}\n"
      ]
     }
    ],
@@ -265,9 +265,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Apple\n",
+      "Mango\n",
       "Orange\n",
-      "Mango\n"
+      "Apple\n"
      ]
     }
    ],
@@ -352,23 +352,23 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the number:  5\n"
+      "Enter the number:  24\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 * 1 = 5\n",
-      "5 * 2 = 10\n",
-      "5 * 3 = 15\n",
-      "5 * 4 = 20\n",
-      "5 * 5 = 25\n",
-      "5 * 6 = 30\n",
-      "5 * 7 = 35\n",
-      "5 * 8 = 40\n",
-      "5 * 9 = 45\n",
-      "5 * 10 = 50\n"
+      "24 * 1 = 24\n",
+      "24 * 2 = 48\n",
+      "24 * 3 = 72\n",
+      "24 * 4 = 96\n",
+      "24 * 5 = 120\n",
+      "24 * 6 = 144\n",
+      "24 * 7 = 168\n",
+      "24 * 8 = 192\n",
+      "24 * 9 = 216\n",
+      "24 * 10 = 240\n"
      ]
     }
    ],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "01aa65f2-733f-4b36-b430-f106fcfefb0e",
    "metadata": {},
    "outputs": [
@@ -452,14 +452,6 @@
     "    \n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a541d3c-3c3e-4da7-9654-b0b49d9c0dec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
